--- a/src/main/resources/de/gfi/felix/abschlussprojekt/gui/kalender-view.fxml
+++ b/src/main/resources/de/gfi/felix/abschlussprojekt/gui/kalender-view.fxml
@@ -1,14 +1,146 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="de.gfi.felix.abschlussprojekt.gui.KalenderView"
-            prefHeight="400.0" prefWidth="600.0">
-
-</AnchorPane>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.gfi.felix.abschlussprojekt.gui.KalenderController">
+   <top>
+      <FlowPane alignment="CENTER" prefHeight="35.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <children>
+            <Label text="Gruppenplanung">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </Label>
+         </children>
+      </FlowPane>
+   </top>
+   <bottom>
+      <FlowPane alignment="CENTER_RIGHT" prefHeight="35.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <children>
+            <Button mnemonicParsing="false" prefWidth="100.0" text="PDF Erstellen">
+               <FlowPane.margin>
+                  <Insets bottom="10.0" right="5.0" top="5.0" />
+               </FlowPane.margin>
+            </Button>
+            <Button mnemonicParsing="false" prefWidth="75.0" text="Speichern">
+               <FlowPane.margin>
+                  <Insets bottom="10.0" right="5.0" top="5.0" />
+               </FlowPane.margin>
+            </Button>
+            <Button mnemonicParsing="false" prefWidth="75.0" text="Abbrechen">
+               <FlowPane.margin>
+                  <Insets bottom="10.0" right="25.0" top="5.0" />
+               </FlowPane.margin>
+            </Button>
+         </children>
+      </FlowPane>
+   </bottom>
+   <left>
+      <FlowPane prefHeight="200.0" prefWidth="25.0" BorderPane.alignment="CENTER" />
+   </left>
+   <right>
+      <FlowPane prefHeight="200.0" prefWidth="25.0" BorderPane.alignment="CENTER" />
+   </right>
+   <center>
+      <GridPane BorderPane.alignment="CENTER">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <TableView prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
+              <columns>
+                <TableColumn prefWidth="120.0" text="Datum" />
+                <TableColumn prefWidth="150.0" text="Gruppenbezeichnung" />
+                  <TableColumn prefWidth="150.0" text="Gruppenstatus" />
+                  <TableColumn prefWidth="120.0" text="Essen verfügbar" />
+              </columns>
+            </TableView>
+            <FlowPane prefHeight="200.0" prefWidth="200.0">
+               <children>
+                  <ComboBox prefWidth="125.0" promptText="Jahr">
+                     <FlowPane.margin>
+                        <Insets bottom="5.0" right="5.0" top="5.0" />
+                     </FlowPane.margin>
+                  </ComboBox>
+                  <ComboBox prefHeight="25.0" prefWidth="125.0" promptText="Monat">
+                     <FlowPane.margin>
+                        <Insets bottom="5.0" right="5.0" top="5.0" />
+                     </FlowPane.margin>
+                  </ComboBox>
+                  <ComboBox prefWidth="175.0" promptText="Gruppenauswahl">
+                     <FlowPane.margin>
+                        <Insets bottom="5.0" left="5.0" top="5.0" />
+                     </FlowPane.margin>
+                  </ComboBox>
+               </children>
+            </FlowPane>
+            <FlowPane alignment="CENTER" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
+               <children>
+                  <Button mnemonicParsing="false" prefWidth="35.0" text="&lt;--">
+                     <FlowPane.margin>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                     </FlowPane.margin>
+                  </Button>
+                  <Button mnemonicParsing="false" prefWidth="35.0" text="--&gt;">
+                     <FlowPane.margin>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                     </FlowPane.margin>
+                  </Button>
+               </children>
+            </FlowPane>
+            <FlowPane alignment="CENTER_RIGHT" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="3">
+               <children>
+                  <Label text="von">
+                     <FlowPane.margin>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                     </FlowPane.margin>
+                  </Label>
+                  <DatePicker prefWidth="125.0">
+                     <FlowPane.margin>
+                        <Insets bottom="5.0" top="5.0" />
+                     </FlowPane.margin>
+                  </DatePicker>
+                  <Label text="bis">
+                     <FlowPane.margin>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                     </FlowPane.margin>
+                  </Label>
+                  <DatePicker prefWidth="125.0">
+                     <FlowPane.margin>
+                        <Insets bottom="5.0" top="5.0" />
+                     </FlowPane.margin>
+                  </DatePicker>
+                  <ComboBox prefWidth="150.0" promptText="Statusauswahl">
+                     <FlowPane.margin>
+                        <Insets bottom="5.0" left="10.0" top="5.0" />
+                     </FlowPane.margin>
+                  </ComboBox>
+                  <Button mnemonicParsing="false" prefWidth="75.0" text="Annehmen">
+                     <FlowPane.margin>
+                        <Insets bottom="5.0" left="5.0" top="5.0" />
+                     </FlowPane.margin>
+                  </Button>
+               </children>
+            </FlowPane>
+         </children>
+      </GridPane>
+   </center>
+</BorderPane>
