--- a/src/main/resources/de/gfi/felix/abschlussprojekt/gui/kuechen-view.fxml
+++ b/src/main/resources/de/gfi/felix/abschlussprojekt/gui/kuechen-view.fxml
@@ -1,16 +1,129 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
-
 <?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="de.gfi.felix.abschlussprojekt.gui.Controller">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-    </padding>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
-    <Label fx:id="welcomeText"/>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
-</VBox>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="450.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.gfi.felix.abschlussprojekt.gui.KuechenController">
+    <top>
+        <FlowPane alignment="CENTER" prefHeight="35.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+            <children>
+                <Label text="Küchenkalender">
+                    <font>
+                        <Font name="System Bold" size="18.0" />
+                    </font>
+                </Label>
+            </children>
+        </FlowPane>
+    </top>
+    <bottom>
+        <FlowPane alignment="CENTER_RIGHT" prefHeight="35.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+            <children>
+                <Button mnemonicParsing="false" prefWidth="75.0" text="Speichern">
+                    <FlowPane.margin>
+                        <Insets bottom="10.0" right="5.0" top="5.0" />
+                    </FlowPane.margin>
+                </Button>
+                <Button mnemonicParsing="false" prefWidth="75.0" text="Abbrechen">
+                    <FlowPane.margin>
+                        <Insets bottom="10.0" right="25.0" top="5.0" />
+                    </FlowPane.margin>
+                </Button>
+            </children>
+        </FlowPane>
+    </bottom>
+    <left>
+        <FlowPane prefHeight="200.0" prefWidth="25.0" BorderPane.alignment="CENTER" />
+    </left>
+    <right>
+        <FlowPane prefHeight="200.0" prefWidth="25.0" BorderPane.alignment="CENTER" />
+    </right>
+    <center>
+        <GridPane BorderPane.alignment="CENTER">
+            <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            </rowConstraints>
+            <children>
+                <TableView prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
+                    <columns>
+                        <TableColumn prefWidth="195.0" text="Datum" />
+                        <TableColumn prefWidth="195.0" text="Küche ist geöffnet" />
+                    </columns>
+                </TableView>
+                <FlowPane prefHeight="200.0" prefWidth="200.0">
+                    <children>
+                        <ComboBox prefWidth="125.0" promptText="Jahr">
+                            <FlowPane.margin>
+                                <Insets bottom="5.0" right="5.0" top="5.0" />
+                            </FlowPane.margin>
+                        </ComboBox>
+                        <ComboBox prefHeight="25.0" prefWidth="125.0" promptText="Monat">
+                            <FlowPane.margin>
+                                <Insets bottom="5.0" right="5.0" top="5.0" />
+                            </FlowPane.margin>
+                        </ComboBox>
+                    </children>
+                </FlowPane>
+                <FlowPane alignment="CENTER" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
+                    <children>
+                        <Button mnemonicParsing="false" prefWidth="35.0" text="&lt;--">
+                            <FlowPane.margin>
+                                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                            </FlowPane.margin>
+                        </Button>
+                        <Button mnemonicParsing="false" prefWidth="35.0" text="--&gt;">
+                            <FlowPane.margin>
+                                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                            </FlowPane.margin>
+                        </Button>
+                    </children>
+                </FlowPane>
+                <FlowPane alignment="CENTER_RIGHT" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="3">
+                    <children>
+                        <Label text="von">
+                            <FlowPane.margin>
+                                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                            </FlowPane.margin>
+                        </Label>
+                        <DatePicker prefWidth="125.0">
+                            <FlowPane.margin>
+                                <Insets bottom="5.0" top="5.0" />
+                            </FlowPane.margin>
+                        </DatePicker>
+                        <Label text="bis">
+                            <FlowPane.margin>
+                                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                            </FlowPane.margin>
+                        </Label>
+                        <DatePicker prefWidth="125.0">
+                            <FlowPane.margin>
+                                <Insets bottom="5.0" top="5.0" />
+                            </FlowPane.margin>
+                        </DatePicker>
+                        <Button mnemonicParsing="false" prefWidth="75.0" text="Annehmen">
+                            <FlowPane.margin>
+                                <Insets bottom="5.0" left="5.0" top="5.0" />
+                            </FlowPane.margin>
+                        </Button>
+                    </children>
+                </FlowPane>
+            </children>
+        </GridPane>
+    </center>
+</BorderPane>
