--- a/src/main/resources/de/gfi/felix/abschlussprojekt/gui/kalender-view.fxml
+++ b/src/main/resources/de/gfi/felix/abschlussprojekt/gui/kalender-view.fxml
@@ -29,17 +29,17 @@
    <bottom>
       <FlowPane alignment="CENTER_RIGHT" prefHeight="35.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
-            <Button mnemonicParsing="false" prefWidth="100.0" text="PDF Erstellen">
+            <Button fx:id="btPDFErstellen" mnemonicParsing="false" onAction="#onBtPDFErstellenClick" prefWidth="100.0" text="PDF Erstellen">
                <FlowPane.margin>
                   <Insets bottom="10.0" right="5.0" top="5.0" />
                </FlowPane.margin>
             </Button>
-            <Button mnemonicParsing="false" prefWidth="75.0" text="Speichern">
+            <Button fx:id="btSpeichern" mnemonicParsing="false" onAction="#onBtSpeichernClick" prefWidth="75.0" text="Speichern">
                <FlowPane.margin>
                   <Insets bottom="10.0" right="5.0" top="5.0" />
                </FlowPane.margin>
             </Button>
-            <Button mnemonicParsing="false" prefWidth="75.0" text="Abbrechen">
+            <Button fx:id="btAbbrechen" mnemonicParsing="false" onAction="#onBtAbbrechenClick" prefWidth="75.0" text="Abbrechen">
                <FlowPane.margin>
                   <Insets bottom="10.0" right="25.0" top="5.0" />
                </FlowPane.margin>
@@ -65,27 +65,27 @@
             <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <TableView prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
+            <TableView fx:id="tbTabelle" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
               <columns>
-                <TableColumn prefWidth="120.0" text="Datum" />
-                <TableColumn prefWidth="150.0" text="Gruppenbezeichnung" />
-                  <TableColumn prefWidth="150.0" text="Gruppenstatus" />
-                  <TableColumn prefWidth="120.0" text="Essen verfügbar" />
+                <TableColumn fx:id="tcDatum" prefWidth="120.0" text="Datum" />
+                <TableColumn fx:id="tcGruppenBezeichnung" prefWidth="150.0" text="Gruppenbezeichnung" />
+                  <TableColumn fx:id="tcGruppenStatus" prefWidth="150.0" text="Gruppenstatus" />
+                  <TableColumn fx:id="tcEssenVerfuegbar" prefWidth="120.0" text="Essen verfügbar" />
               </columns>
             </TableView>
             <FlowPane prefHeight="200.0" prefWidth="200.0">
                <children>
-                  <ComboBox prefWidth="125.0" promptText="Jahr">
+                  <ComboBox fx:id="cbJahr" prefWidth="125.0" promptText="Jahr">
                      <FlowPane.margin>
                         <Insets bottom="5.0" right="5.0" top="5.0" />
                      </FlowPane.margin>
                   </ComboBox>
-                  <ComboBox prefHeight="25.0" prefWidth="125.0" promptText="Monat">
+                  <ComboBox fx:id="cbMonat" prefHeight="25.0" prefWidth="125.0" promptText="Monat">
                      <FlowPane.margin>
                         <Insets bottom="5.0" right="5.0" top="5.0" />
                      </FlowPane.margin>
                   </ComboBox>
-                  <ComboBox prefWidth="175.0" promptText="Gruppenauswahl">
+                  <ComboBox fx:id="cbGruppenauswahl" prefWidth="175.0" promptText="Gruppenauswahl">
                      <FlowPane.margin>
                         <Insets bottom="5.0" left="5.0" top="5.0" />
                      </FlowPane.margin>
@@ -94,12 +94,12 @@
             </FlowPane>
             <FlowPane alignment="CENTER" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
                <children>
-                  <Button mnemonicParsing="false" prefWidth="35.0" text="&lt;--">
+                  <Button fx:id="btPrevious" mnemonicParsing="false" onAction="#onBtPreviousClick" prefWidth="35.0" text="&lt;--">
                      <FlowPane.margin>
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                      </FlowPane.margin>
                   </Button>
-                  <Button mnemonicParsing="false" prefWidth="35.0" text="--&gt;">
+                  <Button fx:id="btNext" mnemonicParsing="false" onAction="#onBtNextClick" prefWidth="35.0" text="--&gt;">
                      <FlowPane.margin>
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                      </FlowPane.margin>
@@ -113,7 +113,7 @@
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                      </FlowPane.margin>
                   </Label>
-                  <DatePicker prefWidth="125.0">
+                  <DatePicker fx:id="dpVon" prefWidth="125.0">
                      <FlowPane.margin>
                         <Insets bottom="5.0" top="5.0" />
                      </FlowPane.margin>
@@ -123,17 +123,17 @@
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                      </FlowPane.margin>
                   </Label>
-                  <DatePicker prefWidth="125.0">
+                  <DatePicker fx:id="dpBis" prefWidth="125.0">
                      <FlowPane.margin>
                         <Insets bottom="5.0" top="5.0" />
                      </FlowPane.margin>
                   </DatePicker>
-                  <ComboBox prefWidth="150.0" promptText="Statusauswahl">
+                  <ComboBox fx:id="cbStatusAuswahl" prefWidth="150.0" promptText="Statusauswahl">
                      <FlowPane.margin>
                         <Insets bottom="5.0" left="10.0" top="5.0" />
                      </FlowPane.margin>
                   </ComboBox>
-                  <Button mnemonicParsing="false" prefWidth="75.0" text="Annehmen">
+                  <Button fx:id="btAnnehmen" mnemonicParsing="false" onAction="#onBtAnnehmenClick" prefWidth="75.0" text="Annehmen">
                      <FlowPane.margin>
                         <Insets bottom="5.0" left="5.0" top="5.0" />
                      </FlowPane.margin>
