--- a/src/main/resources/de/gfi/felix/abschlussprojekt/gui/kuechen-view.fxml
+++ b/src/main/resources/de/gfi/felix/abschlussprojekt/gui/kuechen-view.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="450.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.gfi.felix.abschlussprojekt.gui.KuechenController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.gfi.felix.abschlussprojekt.gui.KuechenController">
     <top>
         <FlowPane alignment="CENTER" prefHeight="35.0" prefWidth="200.0" BorderPane.alignment="CENTER">
             <children>
@@ -29,12 +29,12 @@
     <bottom>
         <FlowPane alignment="CENTER_RIGHT" prefHeight="35.0" prefWidth="200.0" BorderPane.alignment="CENTER">
             <children>
-                <Button mnemonicParsing="false" prefWidth="75.0" text="Speichern">
+                <Button fx:id="btSpeichern" mnemonicParsing="false" onAction="#onBtSpeichernClick" prefWidth="75.0" text="Speichern">
                     <FlowPane.margin>
                         <Insets bottom="10.0" right="5.0" top="5.0" />
                     </FlowPane.margin>
                 </Button>
-                <Button mnemonicParsing="false" prefWidth="75.0" text="Abbrechen">
+                <Button fx:id="btAbbrechen" mnemonicParsing="false" onAction="#onBtAbbrechenClick" prefWidth="75.0" text="Abbrechen">
                     <FlowPane.margin>
                         <Insets bottom="10.0" right="25.0" top="5.0" />
                     </FlowPane.margin>
@@ -60,20 +60,20 @@
                 <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
-                <TableView prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
+                <TableView fx:id="tbTabelle" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
                     <columns>
-                        <TableColumn prefWidth="195.0" text="Datum" />
-                        <TableColumn prefWidth="195.0" text="Küche ist geöffnet" />
+                        <TableColumn fx:id="tcDatum" prefWidth="195.0" text="Datum" />
+                        <TableColumn fx:id="tcKuechenStatus" prefWidth="195.0" text="Küche ist geöffnet" />
                     </columns>
                 </TableView>
                 <FlowPane prefHeight="200.0" prefWidth="200.0">
                     <children>
-                        <ComboBox prefWidth="125.0" promptText="Jahr">
+                        <ComboBox fx:id="cbJahr" prefWidth="125.0" promptText="Jahr">
                             <FlowPane.margin>
                                 <Insets bottom="5.0" right="5.0" top="5.0" />
                             </FlowPane.margin>
                         </ComboBox>
-                        <ComboBox prefHeight="25.0" prefWidth="125.0" promptText="Monat">
+                        <ComboBox fx:id="cbMonat" prefHeight="25.0" prefWidth="125.0" promptText="Monat">
                             <FlowPane.margin>
                                 <Insets bottom="5.0" right="5.0" top="5.0" />
                             </FlowPane.margin>
@@ -82,12 +82,12 @@
                 </FlowPane>
                 <FlowPane alignment="CENTER" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
                     <children>
-                        <Button mnemonicParsing="false" prefWidth="35.0" text="&lt;--">
+                        <Button fx:id="btPrevious" mnemonicParsing="false" onAction="#onBtPreviousClick" prefWidth="35.0" text="&lt;--">
                             <FlowPane.margin>
                                 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                             </FlowPane.margin>
                         </Button>
-                        <Button mnemonicParsing="false" prefWidth="35.0" text="--&gt;">
+                        <Button fx:id="btNext" mnemonicParsing="false" onAction="#onBtNextClick" prefWidth="35.0" text="--&gt;">
                             <FlowPane.margin>
                                 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                             </FlowPane.margin>
@@ -101,7 +101,7 @@
                                 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                             </FlowPane.margin>
                         </Label>
-                        <DatePicker prefWidth="125.0">
+                        <DatePicker fx:id="dpVon" prefWidth="125.0">
                             <FlowPane.margin>
                                 <Insets bottom="5.0" top="5.0" />
                             </FlowPane.margin>
@@ -111,12 +111,17 @@
                                 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                             </FlowPane.margin>
                         </Label>
-                        <DatePicker prefWidth="125.0">
+                        <DatePicker fx:id="dpBis" prefWidth="125.0">
                             <FlowPane.margin>
                                 <Insets bottom="5.0" top="5.0" />
                             </FlowPane.margin>
                         </DatePicker>
-                        <Button mnemonicParsing="false" prefWidth="75.0" text="Annehmen">
+                  <Button fx:id="btOffen" mnemonicParsing="false" onAction="#onBtOffenClick" prefWidth="60.0" text="Offen">
+                     <FlowPane.margin>
+                        <Insets bottom="5.0" left="5.0" top="5.0" />
+                     </FlowPane.margin>
+                  </Button>
+                        <Button fx:id="btGeschlossen" mnemonicParsing="false" onAction="#onBtGeschlossenClick" prefWidth="60.0" text="Zu">
                             <FlowPane.margin>
                                 <Insets bottom="5.0" left="5.0" top="5.0" />
                             </FlowPane.margin>
