--- a/src/main/resources/de/gfi/felix/abschlussprojekt/gui/betriebsurlaub-view.fxml
+++ b/src/main/resources/de/gfi/felix/abschlussprojekt/gui/betriebsurlaub-view.fxml
@@ -121,7 +121,7 @@
                         <Insets bottom="5.0" left="5.0" top="5.0" />
                      </FlowPane.margin>
                   </Button>
-                        <Button fx:id="btArbeit" mnemonicParsing="false" onAction="#onBtFreiClick" prefWidth="60.0" text="Arbeit">
+                        <Button fx:id="btArbeit" mnemonicParsing="false" onAction="#onBtArbeitClick" prefWidth="60.0" text="Arbeit">
                             <FlowPane.margin>
                                 <Insets bottom="5.0" left="5.0" top="5.0" />
                             </FlowPane.margin>
