--- a/src/main/resources/de/gfi/felix/abschlussprojekt/gui/kalender-view.fxml
+++ b/src/main/resources/de/gfi/felix/abschlussprojekt/gui/kalender-view.fxml
@@ -113,7 +113,7 @@
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                      </FlowPane.margin>
                   </Label>
-                  <DatePicker fx:id="dpVon" prefWidth="125.0">
+                  <DatePicker fx:id="dpVon" onAction="#onDpVonAction" prefWidth="125.0">
                      <FlowPane.margin>
                         <Insets bottom="5.0" top="5.0" />
                      </FlowPane.margin>
@@ -123,7 +123,7 @@
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                      </FlowPane.margin>
                   </Label>
-                  <DatePicker fx:id="dpBis" prefWidth="125.0">
+                  <DatePicker fx:id="dpBis" onAction="#onDpBisAction" prefWidth="125.0">
                      <FlowPane.margin>
                         <Insets bottom="5.0" top="5.0" />
                      </FlowPane.margin>
