--- a/src/main/resources/de/gfi/felix/abschlussprojekt/gui/kuechen-view.fxml
+++ b/src/main/resources/de/gfi/felix/abschlussprojekt/gui/kuechen-view.fxml
@@ -7,128 +7,148 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.gfi.felix.abschlussprojekt.gui.KuechenController">
-    <top>
-        <FlowPane alignment="CENTER" prefHeight="35.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-            <children>
-                <Label text="Küchenkalender">
-                    <font>
-                        <Font name="System Bold" size="18.0" />
-                    </font>
-                </Label>
-            </children>
-        </FlowPane>
-    </top>
-    <bottom>
-        <FlowPane alignment="CENTER_RIGHT" prefHeight="35.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-            <children>
-                <Button fx:id="btSpeichern" mnemonicParsing="false" onAction="#onBtSpeichernClick" prefWidth="75.0" text="Speichern">
-                    <FlowPane.margin>
-                        <Insets bottom="10.0" right="5.0" top="5.0" />
-                    </FlowPane.margin>
-                </Button>
-                <Button fx:id="btAbbrechen" mnemonicParsing="false" onAction="#onBtAbbrechenClick" prefWidth="75.0" text="Abbrechen">
-                    <FlowPane.margin>
-                        <Insets bottom="10.0" right="25.0" top="5.0" />
-                    </FlowPane.margin>
-                </Button>
-            </children>
-        </FlowPane>
-    </bottom>
-    <left>
-        <FlowPane prefHeight="200.0" prefWidth="25.0" BorderPane.alignment="CENTER" />
-    </left>
-    <right>
-        <FlowPane prefHeight="200.0" prefWidth="25.0" BorderPane.alignment="CENTER" />
-    </right>
-    <center>
-        <GridPane BorderPane.alignment="CENTER">
-            <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            </columnConstraints>
-            <rowConstraints>
-                <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            </rowConstraints>
-            <children>
-                <TableView fx:id="tbTabelle" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
-                    <columns>
-                        <TableColumn fx:id="tcDatum" prefWidth="195.0" text="Datum" />
-                        <TableColumn fx:id="tcKuechenStatus" prefWidth="195.0" text="Küche ist geöffnet" />
-                    </columns>
-                </TableView>
-                <FlowPane prefHeight="200.0" prefWidth="200.0">
-                    <children>
-                        <ComboBox fx:id="cbJahr" onAction="#onCbJahrAction" prefWidth="125.0" promptText="Jahr">
-                            <FlowPane.margin>
-                                <Insets bottom="5.0" right="5.0" top="5.0" />
-                            </FlowPane.margin>
-                        </ComboBox>
-                        <ComboBox fx:id="cbMonat" onAction="#onCbMonatAction" prefHeight="25.0" prefWidth="125.0" promptText="Monat">
-                            <FlowPane.margin>
-                                <Insets bottom="5.0" right="5.0" top="5.0" />
-                            </FlowPane.margin>
-                        </ComboBox>
-                    </children>
-                </FlowPane>
-                <FlowPane alignment="CENTER" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
-                    <children>
-                        <Button fx:id="btPrevious" mnemonicParsing="false" onAction="#onBtPreviousClick" prefWidth="35.0" text="&lt;--">
-                            <FlowPane.margin>
-                                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                            </FlowPane.margin>
+
+<StackPane stylesheets="@../style/style.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.gfi.felix.abschlussprojekt.gui.KuechenController">
+   <children>
+      <FlowPane alignment="TOP_RIGHT" prefHeight="200.0" prefWidth="200.0">
+         <children>
+            <ImageView fitHeight="50.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="C:\Abschlussprojekt\src\main\resources\de\gfi\felix\abschlussprojekt\style\GFILogo.png" />
+               </image>
+            </ImageView>
+         </children>
+         <StackPane.margin>
+            <Insets bottom="8.0" left="5.0" right="25.0" top="8.0" />
+         </StackPane.margin>
+      </FlowPane>
+      <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="500.0">
+          <top>
+              <FlowPane alignment="CENTER" prefHeight="35.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+                  <children>
+                      <Label text="Küchenkalender">
+                          <font>
+                              <Font name="System Bold" size="18.0" />
+                          </font>
+                      </Label>
+                  </children>
+              </FlowPane>
+          </top>
+          <bottom>
+              <FlowPane alignment="CENTER_RIGHT" prefHeight="35.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+                  <children>
+                      <Button fx:id="btSpeichern" mnemonicParsing="false" onAction="#onBtSpeichernClick" prefWidth="75.0" text="Speichern">
+                          <FlowPane.margin>
+                              <Insets bottom="10.0" right="5.0" top="5.0" />
+                          </FlowPane.margin>
+                      </Button>
+                      <Button fx:id="btAbbrechen" mnemonicParsing="false" onAction="#onBtAbbrechenClick" prefWidth="75.0" text="Abbrechen">
+                          <FlowPane.margin>
+                              <Insets bottom="10.0" right="25.0" top="5.0" />
+                          </FlowPane.margin>
+                      </Button>
+                  </children>
+              </FlowPane>
+          </bottom>
+          <left>
+              <FlowPane prefHeight="200.0" prefWidth="25.0" BorderPane.alignment="CENTER" />
+          </left>
+          <right>
+              <FlowPane prefHeight="200.0" prefWidth="25.0" BorderPane.alignment="CENTER" />
+          </right>
+          <center>
+              <GridPane BorderPane.alignment="CENTER">
+                  <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  </columnConstraints>
+                  <rowConstraints>
+                      <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  </rowConstraints>
+                  <children>
+                      <TableView fx:id="tbTabelle" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
+                          <columns>
+                              <TableColumn fx:id="tcDatum" prefWidth="195.0" text="Datum" />
+                              <TableColumn fx:id="tcKuechenStatus" prefWidth="195.0" text="Küche ist geöffnet" />
+                          </columns>
+                      </TableView>
+                      <FlowPane prefHeight="200.0" prefWidth="200.0">
+                          <children>
+                              <ComboBox fx:id="cbJahr" onAction="#onCbJahrAction" prefWidth="125.0" promptText="Jahr">
+                                  <FlowPane.margin>
+                                      <Insets bottom="5.0" right="5.0" top="5.0" />
+                                  </FlowPane.margin>
+                              </ComboBox>
+                              <ComboBox fx:id="cbMonat" onAction="#onCbMonatAction" prefHeight="25.0" prefWidth="125.0" promptText="Monat">
+                                  <FlowPane.margin>
+                                      <Insets bottom="5.0" right="5.0" top="5.0" />
+                                  </FlowPane.margin>
+                              </ComboBox>
+                          </children>
+                      </FlowPane>
+                      <FlowPane alignment="CENTER" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
+                          <children>
+                              <Button fx:id="btPrevious" mnemonicParsing="false" onAction="#onBtPreviousClick" prefWidth="35.0" text="&lt;--">
+                                  <FlowPane.margin>
+                                      <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                  </FlowPane.margin>
+                              </Button>
+                              <Button fx:id="btNext" mnemonicParsing="false" onAction="#onBtNextClick" prefWidth="35.0" text="--&gt;">
+                                  <FlowPane.margin>
+                                      <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                  </FlowPane.margin>
+                              </Button>
+                          </children>
+                      </FlowPane>
+                      <FlowPane alignment="CENTER_RIGHT" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="3">
+                          <children>
+                              <Label text="von">
+                                  <FlowPane.margin>
+                                      <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                  </FlowPane.margin>
+                              </Label>
+                              <DatePicker fx:id="dpVon" onAction="#onDpVonAction" prefWidth="125.0">
+                                  <FlowPane.margin>
+                                      <Insets bottom="5.0" top="5.0" />
+                                  </FlowPane.margin>
+                              </DatePicker>
+                              <Label text="bis">
+                                  <FlowPane.margin>
+                                      <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                  </FlowPane.margin>
+                              </Label>
+                              <DatePicker fx:id="dpBis" onAction="#onDpBisAction" prefWidth="125.0">
+                                  <FlowPane.margin>
+                                      <Insets bottom="5.0" top="5.0" />
+                                  </FlowPane.margin>
+                              </DatePicker>
+                        <Button fx:id="btOffen" mnemonicParsing="false" onAction="#onBtOffenClick" prefWidth="60.0" text="Offen">
+                           <FlowPane.margin>
+                              <Insets bottom="5.0" left="5.0" top="5.0" />
+                           </FlowPane.margin>
                         </Button>
-                        <Button fx:id="btNext" mnemonicParsing="false" onAction="#onBtNextClick" prefWidth="35.0" text="--&gt;">
-                            <FlowPane.margin>
-                                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                            </FlowPane.margin>
-                        </Button>
-                    </children>
-                </FlowPane>
-                <FlowPane alignment="CENTER_RIGHT" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="3">
-                    <children>
-                        <Label text="von">
-                            <FlowPane.margin>
-                                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                            </FlowPane.margin>
-                        </Label>
-                        <DatePicker fx:id="dpVon" onAction="#onDpVonAction" prefWidth="125.0">
-                            <FlowPane.margin>
-                                <Insets bottom="5.0" top="5.0" />
-                            </FlowPane.margin>
-                        </DatePicker>
-                        <Label text="bis">
-                            <FlowPane.margin>
-                                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                            </FlowPane.margin>
-                        </Label>
-                        <DatePicker fx:id="dpBis" onAction="#onDpBisAction" prefWidth="125.0">
-                            <FlowPane.margin>
-                                <Insets bottom="5.0" top="5.0" />
-                            </FlowPane.margin>
-                        </DatePicker>
-                  <Button fx:id="btOffen" mnemonicParsing="false" onAction="#onBtOffenClick" prefWidth="60.0" text="Offen">
-                     <FlowPane.margin>
-                        <Insets bottom="5.0" left="5.0" top="5.0" />
-                     </FlowPane.margin>
-                  </Button>
-                        <Button fx:id="btGeschlossen" mnemonicParsing="false" onAction="#onBtGeschlossenClick" prefWidth="60.0" text="Zu">
-                            <FlowPane.margin>
-                                <Insets bottom="5.0" left="5.0" top="5.0" />
-                            </FlowPane.margin>
-                        </Button>
-                    </children>
-                </FlowPane>
-            </children>
-        </GridPane>
-    </center>
-</BorderPane>
+                              <Button fx:id="btGeschlossen" mnemonicParsing="false" onAction="#onBtGeschlossenClick" prefWidth="60.0" text="Zu">
+                                  <FlowPane.margin>
+                                      <Insets bottom="5.0" left="5.0" top="5.0" />
+                                  </FlowPane.margin>
+                              </Button>
+                          </children>
+                      </FlowPane>
+                  </children>
+              </GridPane>
+          </center>
+      </BorderPane>
+   </children>
+</StackPane>
