--- a/src/main/resources/de/gfi/felix/abschlussprojekt/gui/betriebsurlaub-view.fxml
+++ b/src/main/resources/de/gfi/felix/abschlussprojekt/gui/betriebsurlaub-view.fxml
@@ -24,7 +24,7 @@
          <children>
             <ImageView fitHeight="50.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="C:\Abschlussprojekt\src\main\resources\de\gfi\felix\abschlussprojekt\style\GFILogo.png" />
+                  <Image url="@../style/GFILogo.png" />
                </image>
                <FlowPane.margin>
                   <Insets bottom="8.0" left="5.0" right="25.0" top="8.0" />
